Ginormous lunges toward media playback. 'full' button clones a pop up to (almost) full screen.     And 'unfull'.     while pop-down holds the original contribution visibility:hidden. Hint of a beginning of a master 'play' button. Simplified HTML for oembed iframe-contents.     Sloughing off as much as possible ti embed_content.js Fixing JSON in script-element encoding issue. Passing parenthetical groups from matcher strings to embed_content.js embed_content.js folds all kinds of actors in the right order     jQuery, youtube iframe "API", iFrameResizer     $.getScript() shifts more control from Python to JS     such as only loading youtube iframe "API" for youtube embeds     getting parameters from URL rather than MONTY. Trial run of iFrameResizer messages back and forth, mother-daughter. Lame workaround for zero-iframe-ize bug. Using the YouTube iFrame "API".  Yes those are scare quotes.     Actually I'm so relieved I don't have to fold this into     the onerous oppressive Google Cloudy API gulag.     Whew how long can that last. query_get() has been handy in both js.

--- a/static/code/contribution.css
+++ b/static/code/contribution.css
@@ -2,10 +2,12 @@
 
 #up-top {
     overflow: hidden;
+    /* THANKS:  Outer div tall as inner divs, https://stackoverflow.com/a/804936/673991 */
     margin-bottom: 0.1em;
 }
 
-#status-prompt {
+#status-prompt,
+#play-prompt {
     float: left;
     text-align: left;
     font: menu;
@@ -87,6 +89,7 @@
     position: relative;
     top: 0;
     left: 0;
+    z-index: 0;
     resize: both;
     min-width: 4em;
     min-height: 2em;
@@ -141,6 +144,11 @@
 .save-bar {
     /*text-align: right;*/
 }
+.save-bar .full,
+.save-bar .unfull {
+    font: small-caption;
+    float: left;
+}
 .save-bar .edit,
 .save-bar .cancel,
 .save-bar .discard,
@@ -162,6 +170,10 @@
 .grip {
     cursor: move;
     padding-right: 0.3em;
+}
+
+.pop-down {
+    visibility: hidden;
 }
 
 .double-anon {
@@ -238,3 +250,8 @@ iframe { display:block; }
 .render-bar iframe {
     border: 1px solid black;
 }
+
+        .save-bar   .full { display: inline-block; }
+.pop-up .save-bar   .full { display: none; }
+        .save-bar .unfull { display: none; }
+.pop-up .save-bar .unfull { display: inline-block; }
